// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`alert > renders with actions correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="wrapper" class="">
    <div data-slot="title" class="">Alert</div>
    <!--v-if-->
    <div data-slot="actions" class=""><button type="button" data-slot="base" class="">
        <!--v-if--><span data-slot="label" class="">Action</span>
        <!--v-if-->
      </button></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`alert > renders with as correctly 1`] = `
"<article data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="wrapper" class="">
    <div data-slot="title" class="">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</article>"
`;

exports[`alert > renders with avatar correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" data-slot="image"></span>
  <div data-slot="wrapper" class="">
    <div data-slot="title" class="">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`alert > renders with class correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="w-48">
  <!--v-if-->
  <div data-slot="wrapper" class="">
    <div data-slot="title" class="">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`alert > renders with close correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="wrapper" class="">
    <div data-slot="title" class="">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <div data-slot="actions" class="">
    <!--v-if--><button type="button" aria-label="Close" data-slot="base" class=""><span class="iconify i-lucide:x" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button>
  </div>
</div>"
`;

exports[`alert > renders with close slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="wrapper" class="">
    <div data-slot="title" class="">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`alert > renders with closeIcon correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="wrapper" class="">
    <div data-slot="title" class="">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <div data-slot="actions" class="">
    <!--v-if--><button type="button" aria-label="Close" data-slot="base" class=""><span class="iconify i-lucide:trash" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if-->
    </button>
  </div>
</div>"
`;

exports[`alert > renders with description correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="wrapper" class="">
    <div data-slot="title" class="">Alert</div>
    <div data-slot="description" class="">Description</div>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`alert > renders with description slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="wrapper" class="">
    <div data-slot="title" class="">Alert</div>
    <div data-slot="description" class="">Description slot</div>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`alert > renders with icon correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class=""><span class="iconify i-lucide:lightbulb" aria-hidden="true" data-slot="icon"></span>
  <div data-slot="wrapper" class="">
    <div data-slot="title" class="">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`alert > renders with leading slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="wrapper" class="">
    <div data-slot="title" class="">Leading slot</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`alert > renders with neutral variant outline correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="wrapper" class="">
    <div data-slot="title" class="">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`alert > renders with neutral variant soft correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="wrapper" class="">
    <div data-slot="title" class="">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`alert > renders with neutral variant solid correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="wrapper" class="">
    <div data-slot="title" class="">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`alert > renders with neutral variant subtle correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="wrapper" class="">
    <div data-slot="title" class="">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`alert > renders with orientation horizontal correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class=""><span class="iconify i-lucide:lightbulb" aria-hidden="true" data-slot="icon"></span>
  <div data-slot="wrapper" class="">
    <div data-slot="title" class="">Alert</div>
    <div data-slot="description" class="">This is a description</div>
    <!--v-if-->
  </div>
  <div data-slot="actions" class=""><button type="button" data-slot="base" class="">
      <!--v-if--><span data-slot="label" class="">Action</span>
      <!--v-if-->
    </button>
    <!--v-if-->
  </div>
</div>"
`;

exports[`alert > renders with orientation vertical correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class=""><span class="iconify i-lucide:lightbulb" aria-hidden="true" data-slot="icon"></span>
  <div data-slot="wrapper" class="">
    <div data-slot="title" class="">Alert</div>
    <div data-slot="description" class="">This is a description</div>
    <div data-slot="actions" class=""><button type="button" data-slot="base" class="">
        <!--v-if--><span data-slot="label" class="">Action</span>
        <!--v-if-->
      </button></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`alert > renders with primary variant outline correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="wrapper" class="">
    <div data-slot="title" class="">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`alert > renders with primary variant soft correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="wrapper" class="">
    <div data-slot="title" class="">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`alert > renders with primary variant solid correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="wrapper" class="">
    <div data-slot="title" class="">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`alert > renders with primary variant subtle correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="wrapper" class="">
    <div data-slot="title" class="">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`alert > renders with title correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="wrapper" class="">
    <div data-slot="title" class="">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`alert > renders with title slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="wrapper" class="">
    <div data-slot="title" class="">Title slot</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`alert > renders with ui correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="wrapper" class="">
    <div data-slot="title" class="font-bold">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;
